--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "redux": "^4.0.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
+    "request": "^2.87.0",
     "webpack": "^2.5.0"
   }
 }
