--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
+    "css-loader": "^1.0.0",
     "eslint": "^3.19.0",
-    "eslint-plugin-react": "^6.10.3"
+    "eslint-plugin-react": "^6.10.3",
+    "style-loader": "^0.23.0"
   },
   "dependencies": {
     "axios": "^0.16.1",
@@ -34,6 +36,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "jquery": "^3.3.1",
     "nodemon": "^1.18.2",
     "prop-types": "^15.6.2",
     "react": "^15.5.4",
@@ -45,6 +48,7 @@
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
     "request": "^2.87.0",
+    "toastr": "^2.1.4",
     "webpack": "^2.5.0"
   }
 }
