--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "bootstrap": "^4.1.3",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "jquery": "^3.3.1",
