--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemon": "^1.18.2",
     "prop-types": "^15.6.2",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.32.3",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
