--- a/package.json
+++ b/package.json
@@ -7,19 +7,29 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "dev": "set NODE_PATH=./lib&& nodemon --exec babel-node lib/server.js",
+    "dev": "set NODE_PATH=./lib&& pm2 start lib/server.js --watch --interpreter babel-node --name appDev",
+    "dev-windows": "set NODE_PATH=./lib&& nodemon --exec babel-node lib/server.js",
     "dev-mac": "NODE_PATH=./lib pm2 start lib/server.js --watch --interpreter babel-node --name appDev",
     "webpack": "webpack -wd",
     "test": "set NODE_PATH=./lib&& jest --watch",
     "verify-tests": "set NODE_PATH=./lib&& jest --coverage",
     "build-webpack": "webpack -p",
     "build-node": "babel lib -d build --copy-files",
-    "start-prod": "NODE_ENV=production NODE_PATH=./build pm2 start build/server.js -i max --name appProd"
+    "start-prod": "NODE_ENV=production NODE_PATH=./build pm2 start build/server.js -i max --name appProd",
+    "start-old": "set NODE_PATH=./build&& node build/server.js",
+    "start": "node server"
   },
   "babel": {
     "presets": [
       "react",
-      ["env", {"targets": { "node": "current"} }]
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
     ],
     "plugins": [
       "transform-class-properties",
@@ -47,6 +57,7 @@
     "express": "^4.15.2",
     "jquery": "^3.3.1",
     "nodemon": "^1.18.2",
+    "pm2": "^3.1.3",
     "prop-types": "^15.6.2",
     "react": "^16.0.0",
     "react-bootstrap": "^0.32.3",
