--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^6.10.3",
     "jest": "^23.6.0",
+    "nodemon": "^1.18.2",
     "react-test-renderer": "^16.5.2",
     "style-loader": "^0.23.0"
   },
@@ -57,7 +58,6 @@
     "express": "^4.15.2",
     "jquery": "^3.3.1",
     "nodemon": "^1.18.2",
-    "pm2": "^3.1.3",
     "prop-types": "^15.6.2",
     "react": "^16.0.0",
     "react-bootstrap": "^0.32.3",
@@ -68,6 +68,6 @@
     "redux-thunk": "^2.3.0",
     "request": "^2.87.0",
     "toastr": "^2.1.4",
-    "webpack": "^3.12.0"
+    "webpack": "^3.0.0"
   }
 }
